# PyBDR

./: .gitignore  INSTALL.md  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  environment.yml  pyproject.toml  setup.py
benchmarks/: benchmark_boundary_analysis_vs_naive_partition_cmp.py  benchmark_brusselator_cmp.py  benchmark_brusselator_nonconvex.py  benchmark_brusselator_polytope.py  benchmark_brusselator_zonotope.py  benchmark_brusslator.py  benchmark_interval_arithmetic.m  benchmark_interval_arithmetic.py  benchmark_jet_engine_cmp.py  benchmark_lorentz.py  benchmark_lotka_volterra_2d_cmp.py  benchmark_node_spiral1.py  benchmark_node_spiral1_cmp.py  benchmark_node_spiral2.py  benchmark_over.py  benchmark_sym_derivative.py  benchmark_synchronous_machine.py  benchmark_synchronous_machine_cmp.py  benchmark_under.py  benchmark_vanderpol.py  benchmark_vanderpol_cmp.py
doc/: dev_guideline.md  dev_tips.md  todo_list.md
example/: benchmark_boundary_analysis_vs_naive_partition_cmp.py  benchmark_brusselator_cmp.py  benchmark_interval_arithmetic.py  benchmark_jet_engine_cmp.py  benchmark_lotka_volterra_2d_cmp.py  benchmark_over.py  benchmark_sym_derivative.py  benchmark_synchronous_machine_cmp.py  benchmark_under.py
example/submission/: brusslator_test.py  lorentz_test.py  lotka_test.py  plot_results.py  save_results.py  spiral1_test.py  spiral2_test.py  synchronous_test.py  vanderpol_test.py
pybdr/algorithm/: __init__.py  algorithm.py  alk2011hscc.py  alth2013hscc.py  althoff2013hscc.py  asb2008cdc.py  asb2008cdc_parallel.py  g2005hscc.py  gira2005hscc.py  reach_linear_interval_algo1.py  reach_linear_zono.py  reach_linear_zono_algo1.py  reach_linear_zono_algo1_parallel.py  reach_linear_zono_algo2.py  reach_linear_zono_algo3.py  reach_linear_zono_algo3_parallel.py  scs2022.py  tensor_reach_linear.py  tensor_reach_linear_algo1.py  tensor_reach_linear_algo2.py  tensor_reach_linear_algo3.py  tensor_reach_nonlinear.py  xse2016cav.py
pybdr/dynamic_system/: __init__.py
pybdr/geometry/: __init__.py  geometry.py  interval.py  polytope.py  zonotope.py
pybdr/model/: __init__.py  bicycle.py  genetic_model.py  lorentz.py  lotka_volterra_2d.py  model.py  neural_ode_spiral1.py  neural_ode_spiral2.py  quadrocopterControlledEq.py  synchronous_machine.py  tank6Eq.py  vanderpol.py
pybdr/util/: __init__.py
pyrat/: __init__.py  neural_ode
pyrat/algorithm/: __init__.py  algorithm.py  alk2011hscc.py  althoff2013hscc.py  asb2008cdc.py  cav2016.py  cdc2008.py  hscc2005.py  hscc2011.py  (+3 more)
(+328 files in other folders)
